<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Header -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/loginHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Hoard and Store"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center|center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Drawable ImageView -->
    <ImageView
        android:id="@+id/topDrawableImageView"
        android:layout_width="104dp"
        android:layout_height="185dp"
        android:src="@drawable/inventory"
        app:layout_constraintBottom_toTopOf="@+id/loginCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginHeader" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/loginCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@+id/topDrawableImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Username Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/clickableSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_marginTop="10dp"
                android:text="Don't have an account? Sign up"/>

            <!-- Login Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:layout_marginTop="24dp"
                app:backgroundTint="@color/green"/>



            <!-- Create Account Button -->
<!--            <com.google.android.material.button.MaterialButton-->
<!--                android:id="@+id/createAccountButton"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Create Account"-->
<!--                android:layout_marginTop="16dp"/>-->

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
