...

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="Items"
                app:menu="@menu/top_bar_menu"
                style="@style/Widget.MaterialComponents.Toolbar.Primary" />
        </com.google.android.material.appbar.AppBarLayout>
...


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="30dp"
                    android:clipToPadding="false" />
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
...
