...
                android:padding="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ListView
                android:id="@+id/profileAuthOptions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                app:layout_constraintStart_toEndOf="@+id/listViewProfileOptions"
                app:layout_constraintEnd_toEndOf="parent"/>
        </LinearLayout>
...
